Add Instructions: GameState.java